--- a/react-admin/index.html
+++ b/react-admin/index.html
@@ -7,7 +7,9 @@
     <title>Admin</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script> -->
+
+    <script src="script.js"></script>
   </body>
 </html>
