Add endpoint and calling method on UI for create page in project

--- a/react-admin/index.html
+++ b/react-admin/index.html
@@ -9,7 +9,8 @@
   <body>
     <!-- <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script> -->
-
+    <input type="text" />
+    <button>Create page</button>
     <script src="script.js"></script>
   </body>
 </html>
