Replace native js by react

--- a/react-admin/index.html
+++ b/react-admin/index.html
@@ -7,10 +7,7 @@
     <title>Admin</title>
   </head>
   <body>
-    <!-- <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script> -->
-    <input type="text" />
-    <button>Create page</button>
-    <script src="script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
